tests/valid/noPrecedingSpreadElement.ts
// @ts-nocheck
myFunction("extra", "another");
