tests/invalid/noPrecedingSpreadElement.ts
// @ts-nocheck
const args = [1, 2, 3];
myFunction(...args, "extra");
